--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "docker": "npm run build:prod && npm run seed && npm start"
+    "docker": "npm run build:prod && npm run seed && npm start",
+    "generate": "node helper.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -32,6 +33,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "gnomon": "^1.5.0",
     "jest": "^22.4.3",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
