--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
@@ -46,8 +47,10 @@
     "jest": "^22.4.3",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
+    "p": "^0.2.0",
     "path": "^0.12.7",
     "pg": "^7.4.1",
+    "pg-promise": "^8.4.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
