--- a/.benchmark/hello.yml
+++ b/.benchmark/hello.yml
@@ -2,11 +2,12 @@ config:
   target: 'http://localhost:3004'
   phases:
     - duration: 60
-      arrivalRate: 20
+      arrivalRate: 100
   defaults:
     headers:
       x-my-service-auth: '987401838271002188298567'
 scenarios:
-  - flow:
+  - name: "Load page"
+    flow:
     - get:
-        url: "/api/restaurants/1"
+        url: "/api/restaurants/99/nearby"
