--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "docker": "npm run build:prod && npm start",
+    "generate:photos": "node seeder/createPhotos.js",
     "generate:json": "node seeder/createJSONDummyData.js",
     "generate:csv": "node seeder/createCSVDummyData.js",
-    "fix": "truncate -s -1 dataList.json && echo ] >> dataList.json",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "docker": "npm run build:prod && npm run generate:json"
   },
   "dependencies": {
     "axios": "^0.18.0",
