--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "generate:csv": "node seeder/createCSVDummyData.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "docker": "npm run build:prod && npm run generate:json",
+    "docker:mongo": "npm run build:prod && npm run generate:json",
+    "docker:postgres": "npm run build:prod && npm run generate:csv && npm run seed:postgres && npm run start",
     "artillery": "artillery run ./.benchmark/hello.yml"
   },
   "dependencies": {
