--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start:watch": "nodemon ./server/index.js",
     "seed:mongo": "mongoimport --jsonArray -d apateez-nearby -c restaurants --file dataList.json --numInsertionWorkers 16",
     "seed:postgres": "psql -U oliverhan apateez -f /Users/oliverhan/dev/system-design-capstone/nearby/seeder/seedCSVPostgres.sql",
-    "build": "webpack -d --watch",
-    "build:prod": "webpack -p",
+    "build:dev": "webpack -d --watch",
+    "build": "webpack -p",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -26,8 +26,8 @@
     "generate:csv": "node seeder/createCSVDummyData.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "docker:mongo": "npm run build:prod && npm run generate:json",
-    "docker:postgres": "npm run build:prod && npm run generate:csv && npm run seed:postgres && npm run start",
+    "docker:mongo": "npm run build && npm run generate:json",
+    "docker:postgres": "npm run build && npm run generate:csv && npm run seed:postgres && npm run start",
     "artillery": "artillery run ./.benchmark/hello.yml"
   },
   "dependencies": {
@@ -57,6 +57,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.3.2",
+    "redis": "^2.8.0",
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
