--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^22.4.3",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
+    "newrelic": "^4.1.0",
     "p": "^0.2.0",
     "path": "^0.12.7",
     "pg": "^7.4.1",
@@ -58,6 +59,7 @@
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.3.2",
     "redis": "^2.8.0",
+    "response-time": "^2.3.2",
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
