--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "start": "node ./server/index.js",
     "start:watch": "nodemon ./server/index.js",
+    "start:pm2": "pm2 start  ./server/index.js -i 0",
+    "stop:pm2": "pm2 stop all",
     "seed:mongo": "mongoimport --jsonArray -d apateez-nearby -c restaurants --file dataList.json --numInsertionWorkers 16",
     "seed:postgres": "psql -U oliverhan apateez -f /Users/oliverhan/dev/system-design-capstone/nearby/seeder/seedCSVPostgres.sql",
     "build:dev": "webpack -d --watch",
@@ -40,6 +42,7 @@
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
