--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ version: '3'
 services:
     nearby:
       build: .
+      links:
+        - redis
       depends_on:
-        - 'database'
+        - redis
       ports:
         - '3004:3004'
-
-    database:
-      image: postgres:9.6.2-alpine
       environment:
-        POSTGRES_USER: oliverhan
-        POSTGRES_DB: apateez
+        - REDIS_PORT_6379_TCP_ADDR:"redis:6379"
 
-    # mongodb:
-    #   image: mongo:latest
+    redis:
+      image: redis:latest
+      ports:
+        - 6379:6379
