--- a/.benchmark/hello.yml
+++ b/.benchmark/hello.yml
@@ -1,9 +1,10 @@
 config:
-  target: 'http://54.219.129.40:3004'
+  # Use this for localhost benchmarking
+  target: 'http://localhost:3004'
   phases:
     - duration: 60
-      arrivalRate: 400
-      rampTo: 400
+      arrivalRate: 200
+      rampTo: 200
   defaults:
     headers:
       x-my-service-auth: '987401838271002188298567'
@@ -11,4 +12,4 @@ scenarios:
   - name: "Load page"
     flow:
     - get:
-        url: "/api/restaurants/100/nearby"
+        url: "/restaurants/100"
