--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,18 @@ version: '3'
 services:
     nearby:
       build: .
-      # links:
-      #   - redis
-      # depends_on:
-      #   - redis
+      restart: always
+      links:
+        - redis
+      depends_on:
+        - redis
       ports:
         - '3004:3004'
-      # environment:
-      #   - REDIS_PORT_6379_TCP_ADDR:"redis:6379"
-    #
-    # redis:
-    #   image: redis:latest
-    #   ports:
-    #     - 6379:6379
+      environment:
+        - REDIS_PORT_6379_TCP_ADDR:"redis:6379"
+
+    redis:
+      image: redis:3.2.10
+      restart: always
+      ports:
+        - 6379:6379
