--- a/pg_docker/docker-compose.yml
+++ b/pg_docker/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
     postgresdb:
       image: postgres:latest
+      volumes:
+        - ./postgres-data:/var/lib/postgresql
       environment:
         POSTGRES_USER: pguser
         POSTGRES_PASSWORD: pguser
