--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,17 @@
+worker_processes  2;
+
+events {
+  worker_connections  12000;  ## Default: 1024
+}
+
 http {
     upstream myapp1 {
-        server srv1.example.com;
-        server srv2.example.com;
-        server srv3.example.com;
+        least_conn;
+        server 54.183.218.39:3004;
+        server 13.56.180.162:3004;
+        server 13.57.10.166:3004;
+        server 13.57.191.81:3004;
+        server 54.193.55.3:3004;
     }
 
     server {
