--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "seed:postgres": "psql -U oliverhan apateez -f /Users/oliverhan/dev/system-design-capstone/nearby/seeder/seedCSVPostgres.sql",
     "build:dev": "webpack -d --watch",
     "build": "webpack -p",
+    "build:client": "webpack --config webpack.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -62,17 +63,22 @@
     "react-test-renderer": "^16.3.2",
     "redis": "^2.8.0",
     "response-time": "^2.3.2",
-    "style-loader": "^0.20.3"
+    "style-loader": "^0.20.3",
+    "webpack": "^4.8.3",
+    "webpack-node-externals": "^1.7.2",
+    "window-or-global": "^1.0.1"
   },
   "devDependencies": {
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.14",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "eslint-config-airbnb-base": "^12.1.0"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.4.0",
+    "postcss-loader": "^2.1.5",
+    "webpack-cli": "^2.0.14"
   },
   "jest": {
     "globals": {
