--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "url": "https://github.com/Apatight/nearby/issues"
   },
   "scripts": {
-    "start": "node ./server/index.js",
-    "start:watch": "nodemon ./server/index.js",
+    "start": "nodemon ./server/index.js",
+    "start:prod": "NODE_ENV=production node ./server/index.js",
     "start:pm2": "pm2 start  ./server/index.js -i 0",
     "stop:pm2": "pm2 stop all",
     "seed:mongo": "mongoimport --jsonArray -d apateez-nearby -c restaurants --file dataList.json --numInsertionWorkers 16",
     "seed:postgres": "psql -U oliverhan apateez -f /Users/oliverhan/dev/system-design-capstone/nearby/seeder/seedCSVPostgres.sql",
     "build:dev": "webpack -d --watch",
     "build": "webpack -p",
-    "build:client": "webpack --config webpack.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -29,7 +28,7 @@
     "generate:csv": "node seeder/createCSVDummyData.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "docker": "npm run build && npm run start",
+    "docker": "npm run build && npm run start:prod",
     "artillery": "artillery run ./.benchmark/hello.yml"
   },
   "dependencies": {
@@ -43,7 +42,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
-    "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
@@ -76,8 +75,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "mini-css-extract-plugin": "^0.4.0",
-    "postcss-loader": "^2.1.5",
     "webpack-cli": "^2.0.14"
   },
   "jest": {
