--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
         - REDIS_PORT_6379_TCP_ADDR:"redis:6379"
 
     redis:
-      image: redis:3.2.10
+      image: redis:alpine
       restart: always
+      volumes:
+      - "./home/redis/data:/data"
       ports:
         - 6379:6379
