--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "nodemon ./server/index.js",
-    "start:prod": "NODE_ENV=production node ./server/index.js",
+    "start:prod": "node ./server/index.js",
     "start:pm2": "pm2 start  ./server/index.js -i 0",
     "stop:pm2": "pm2 stop all",
     "seed:mongo": "mongoimport --jsonArray -d apateez-nearby -c restaurants --file dataList.json --numInsertionWorkers 16",
